--- a/index.html
+++ b/index.html
@@ -1,32 +1,98 @@
-<html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Saraivx page</title>
-        <link rel="stylesheet" href="es.css">
-    </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Enviar Relatório</title>
+</head>
 
+<style>
 
-
-        <body class="corpo">
-            <nav>
-            <div class="nav-topBar">   <ul>
-
-            <img src="" alt=""><li>About</li>
-            <img src="" alt=""><li>Projects</li>
-            <img src="" alt=""><li>Contact</li>
-            <img src="" alt=""><li>Example</li>
-
-                </ul>
-            </div>
-        </nav>
-
+    html{
+        background-image: url(https://images.unsplash.com/photo-1671476292787-a15c10dd622b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
+        background-size: cover;
+        background-repeat: no-repeat;
         
-                <header class="textosembranco">
-                    <H1>Hi, i'm João Saraivx</H1>
-                    <p>a back/front end developer.</p>
-                </header>
+    }
+    #fundaoBlur{
+        -webkit-backdrop-filter: blur(15px);
+        backdrop-filter: blur(15px);
+        width: 100% ;
+        height: 100% ;
+        top: 0;
+        left: 0;
+        position: absolute;
+    }
+    .formularioDados{
+        margin-left: auto;
+        margin-right: auto;
+        position: block;
+        align-items: center;
+        display: block;
+        text-align: center;
+        padding-bottom: 30px;
+        border-radius: 15px;
+        width: 350px;
+        height: 250px;    
+        margin: auto;
+    }
+    div{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .textosBranco{
+        color: rgb(255, 246, 246);
+        font-family: sans-serif;
+        font-size: large;       
+    }
+    #butao{
+        color: rgb(255, 255, 255);
+        background-color: #30303000;
+        padding: 10px;
+        backdrop-filter: blue(10px);
+        border-color: aliceblue;
+    }
+    #File{
+        background-color: rgba(121, 121, 121, 0.139);
+        padding: 10px;       
+    }
+    #titulo{
+        padding-top: 20px;
+        font-size: 3em;      
+    }
+    hr{
+        height: 3px;
+        border-color: rgba(0, 0, 0, 0);
+        background-color: rgba(0, 0, 0, 0);
+        filter: blur(2px);
+        margin: 25px;
+        }
+    button{
+        margin:10px;
+    }
+</style>
 
-        </body>
+<body>
+   
+
+<div id="fundaoBlur" >
+ <hr id="espaco" >
+    <div class="formularioDados">
+
+        <form>
+           
+        <h1 class="textosBranco" id="titulo">Anexe o seu relatório.</h1>
+        <hr>
+        <input required class="textosBranco" id="File" name='arquivo' type="file">
+        <label for="arquivo">
+        <button class="textosBranco" id="butao" for="arquivo">Enviar Arquivo</button>
+        </label>
+    </form>
+
+
+
+    </div>
+ </div>   
+</body>
 </html>
