--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
         position: absolute;
     }
     .formularioDados{
-        margin-left: auto;
-        margin-right: auto;
         position: block;
         align-items: center;
         display: block;
@@ -34,42 +32,66 @@
         border-radius: 15px;
         width: 350px;
         height: 250px;    
-        margin: auto;
+        margin: 100px;
+        display: flex;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 30vh;
     }
     div{
-        display: flex;
+        ;
+
+        /*
+        display: flex ;
         justify-content: center;
         align-items: center;
+        */
     }
-    .textosBranco{
-        color: rgb(255, 246, 246);
-        font-family: sans-serif;
-        font-size: large;       
-    }
+
     #butao{
         color: rgb(255, 255, 255);
-        background-color: #30303000;
-        padding: 10px;
-        backdrop-filter: blue(10px);
-        border-color: aliceblue;
+        background-color: #3030302e;
+        padding: 5px;
+        border-width: 0.1px;
+        border-color: rgba(240, 248, 255, 0);
+        border-radius: 15px;
     }
     #File{
         background-color: rgba(121, 121, 121, 0.139);
-        padding: 10px;       
+        padding: 10px;
+      
     }
     #titulo{
-        padding-top: 20px;
-        font-size: 3em;      
+        font-size: 2.5em;      
     }
     hr{
-        height: 3px;
+        height: 1px;
         border-color: rgba(0, 0, 0, 0);
         background-color: rgba(0, 0, 0, 0);
         filter: blur(2px);
-        margin: 25px;
+        margin: 2px;
         }
     button{
         margin:10px;
+    }
+    .textosBranco, p{
+        color: rgb(255, 246, 246);
+        font-family: sans-serif;
+        font-size: large;      
+    }
+    p{
+        font-style: italic;
+    }
+    #File{
+        display: none;
+    }
+    label{
+        background-color: rgba(0, 0, 0, 0.04);
+        padding-bottom: 10px;
+        padding-top: 10px;
+        padding-left: 15px;
+        border-color: aliceblue;
+        border-radius: 10px;
     }
 </style>
 
@@ -84,10 +106,13 @@
            
         <h1 class="textosBranco" id="titulo">Anexe o seu relatório.</h1>
         <hr>
-        <input required class="textosBranco" id="File" name='arquivo' type="file">
-        <label for="arquivo">
-        <button class="textosBranco" id="butao" for="arquivo">Enviar Arquivo</button>
+        <input required class="textosBranco" id="File" name='arquivo' type="file"  >
+        <label class="textosBranco" for="File">Escolher Arquivo
+        <button class="textosBranco" id="butao" for="File">Enviar</button>
         </label>
+        <p class="textosBrancos" >Este arquivo será enviado diretamente a equipe de TI da INTEX CAPS, não se preocupe.</p>    
+
+
     </form>
 
 
