--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
 
         <form>
            
-        <h1 class="textosBranco" id="titulo">Anexe o seu relatório.</h1>
+        <h1 class="textosBranco" id="titulo">Envie um arquivo.</h1>
         <hr>
         <input required class="textosBranco" id="File" name='arquivo' type="file"  >
         <label class="textosBranco" for="File">Escolher Arquivo
         <button class="textosBranco" id="butao" for="File">Enviar</button>
         </label>
-        <p class="textosBrancos" >Este arquivo será enviado diretamente a equipe de TI da INTEX CAPS, não se preocupe.</p>    
+        <p class="textosBrancos" >Este arquivo será enviado diretamente a João Saraiva, o desenvolvedor oficial deste site.</p>    
 
 
     </form>
