--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <aside>
             <h2><span>Seja bem-vindo a</span></h2>
             <h2>InteXcaps</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi debitis corrupti voluptatem labore non tenetur ut molestias animi, accusamus obcaecati asperiores blanditiis reprehenderit rem beatae cumque, excepturi quo. Veniam, veritatis?</p>
+            <p>Somos uma empresa 100% brasileira, especializada na venda de cosméticos que veio para cuidar da sua saúde e beleza.</p>
             <form action="">
                 <input class="inputTexto" type="text" placeholder="Nome">
                 <input class="inputTexto" type="email" placeholder="E-mail">
