--- a/index.html
+++ b/index.html
@@ -63,40 +63,9 @@
     </main>
     <hr>
     <main id="inicio" class="second-content">
-        <h1>Vamos lá</h1>
-        <p>Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.
-            Quero te mostrar um pouco mais sobre as possibilidades deste pequeno site. Com ele podemos adicionar diversas sessões e assuntos.</p>
-    </main>
+        <h1>Serviços</h1>
+        <p>atualmente trabalhamos com o comércio de encapsulados, em gotas e suplementos alimentares.</p>
+        </main>
 
 </body>
 </html>
